Updating styles for media breakpoints

--- a/css/styles.css
+++ b/css/styles.css
@@ -560,6 +560,10 @@ video {
   top: 0px;
 }
 
+.z-10 {
+  z-index: 10;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -735,11 +739,6 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 
 .py-10 {
@@ -934,11 +933,6 @@ input[type="checkbox"]:checked +
   transition-duration: 150ms;
 }
 
-.before\:delay-300::before {
-  content: var(--tw-content);
-  transition-delay: 300ms;
-}
-
 .before\:delay-150::before {
   content: var(--tw-content);
   transition-delay: 150ms;
@@ -1011,12 +1005,18 @@ input[type="checkbox"]:checked +
   .md\:mt-\[-5\%\] {
     margin-top: -5%;
   }
+}
 
-  .md\:inline-grid {
+@media (min-width: 1024px) {
+  .lg\:inline-grid {
     display: inline-grid;
   }
 
-  .md\:grid-cols-3 {
+  .lg\:max-w-96 {
+    max-width: 24rem;
+  }
+
+  .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
